--- a/mentorlist.html
+++ b/mentorlist.html
@@ -1,22 +1,27 @@
 
-<div style="margin-top: 10px;">
-<div style= "display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
-<div style="display: block;" title="Adam Nedelman">
-<a href="https://www.linkedin.com/in/anedelman" target="_blank">
-<span style="vertical-align: middle; margin: 0 auto; display: block; width: 160px; height: 160px; border-radius: 50%; background: rgba(113, 113, 113, 0.24);">
-<img src="http://static.sched.org/a5/1832200/avatar.jpg" alt="Adam Nedelman" style="vertical-align: middle; margin: 0 auto; border-radius: 50%; -webkit-border-radius: 50%; display: block; width: 160px; height: 160px;" />
-</span>
-</a>
-</div>
-<div style="display: block; text-align: center; vertical-align: middle; line-height: 1.2em; margin-top: 10px; font-size: 18px; font-weight: bold; overflow: visible;">
-<em style="font-size: 16px; font-weight: bold; font-style: normal; vertical-align: text-top; display: block; margin-bottom: 5px;">
-Adam Nedelman
-</em>
-</div>
+  <div>
+    <div style="margin-top: 10px;">
+      <div style= "display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
+        <div style="display: block;" title="Adam Nedelman">
+          <a href="https://www.linkedin.com/in/anedelman" target="_blank">
+            <span style="vertical-align: middle; margin: 0 auto; display: block; width: 160px; height: 160px; border-radius: 50%; background: rgba(113, 113, 113, 0.24);">
+              <img src="http://static.sched.org/a5/1832200/avatar.jpg" alt="Adam Nedelman" style="vertical-align: middle; margin: 0 auto; border-radius: 50%; -webkit-border-radius: 50%; display: block; width: 160px; height: 160px;">
+            </span>
+          </a>
+      </div>
+
+
+    <div style="display: block; text-align: center; vertical-align: middle; line-height: 1.2em; margin-top: 10px; font-size: 18px; font-weight: bold; overflow: visible;">
+      <em style="font-size: 16px; font-weight: bold; font-style: normal; vertical-align: text-top; display: block; margin-bottom: 5px;">
+        Adam Nedelman
+      </em>
+    </div>
 
 
     <div style= "font-size: 15px; line-height: 1.2em; margin-top: 1%;">
-  <em style="font-size: 14px; font-style: normal; display: block; margin-bottom: 5px; overflow: visible;">Xoom</em>
+  <em style=
+  "font-size: 14px; font-style: normal; display: block; margin-bottom: 5px; overflow: visible;">
+  Xoom</em>
     </div>
 
 
@@ -31,7 +36,7 @@ Adam Nedelman
 
   <div style="display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
   <div style="display: block;" title=
-  "Kiera Westphal ">
+  "Kiera Westphal">
   <span style=
   "vertical-align: middle; margin: 0 auto; display: block; width: 160px; height: 160px; border-radius: 50%; background: rgba(113, 113, 113, 0.24);">
   <img alt="" src="//schd.ws/a5/1832181/avatar.jpg?a7c" style=
@@ -320,15 +325,14 @@ Adam Nedelman
   </div>
 
 
-  <div style=
-  "display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
+  <div style=  "display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
   <div class="sched-avatar" data-id="1832172" id=
   "sched-speakers-list-item-1832172" style="display: block;" title=
   "Sean Savage">
   <span class="sched-avatar-letter" style=
   "vertical-align: middle; margin: 0 auto; display: block; width: 160px; height: 160px; border-radius: 50%; color: rgba(165, 165, 165, 1); background: rgba(113, 113, 113, 0.24);">
   <em style=
-  "font-style: normal; font-weight: bold; display: none;">SS</em></span>
+  "font-style: normal; font-weight: bold; display: none;">Sean Savage</em></span>
     </div>
 
 
@@ -1202,9 +1206,11 @@ Adam Nedelman
 
 
   <div style=  "display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
-  <div style="display: block;" title="Heather Browning">
-  <span style= "vertical-align: middle; margin: 0 auto; display: block; width: 160px; height: 160px; border-radius: 50%; background: rgba(113, 113, 113, 0.24);">
-  <img alt="Heather Browning" src="//schd.ws/a5/1823588/avatar.jpg" style=
+  <div style="display: block;" title=
+  "Heather Browning">
+  <span style=
+  "vertical-align: middle; margin: 0 auto; display: block; width: 160px; height: 160px; border-radius: 50%; background: rgba(113, 113, 113, 0.24);">
+  <img alt="" src="//schd.ws/a5/1823588/avatar.jpg?13c" style=
   "vertical-align: middle; margin: 0 auto; border-radius: 50%; -webkit-border-radius: 50%; display: block; width: 160px; height: 160px;"></span>
     </div>
 
