--- a/mentorlist-formatted.html
+++ b/mentorlist-formatted.html
@@ -23,9 +23,32 @@
             </em>
         </div>
     </div>
-</div>
 
-<div style="margin-top: 10px;">
+    <div style= "display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
+        <div style="display: block;" title="Michael Hwang">
+            <a href="https://twitter.com/craterpop" target="_blank">
+                <span style="vertical-align: middle; margin: 0 auto; display: block; width: 160px; height: 160px; border-radius: 50%; background: rgba(113, 113, 113, 0.24);">
+                    <img src="https://cdn.evbuc.com/eventlogos/1040789/michaelhwang.png" alt="Michael Hwang" style="vertical-align: middle; margin: 0 auto; border-radius: 50%; -webkit-border-radius: 50%; display: block; width: 160px; height: 160px;" />
+                </span>
+            </a>
+        </div>
+        <div style="display: block; text-align: center; vertical-align: middle; line-height: 1.2em; margin-top: 10px; font-size: 18px; font-weight: bold; overflow: visible;">
+            <em style="font-size: 16px; font-weight: bold; font-style: normal; vertical-align: text-top; display: block; margin-bottom: 5px;">
+                Michael Hwang
+            </em>
+        </div>
+        <div style= "font-size: 15px; line-height: 1.2em; margin-top: 1%;">
+            <em style="font-size: 14px; font-style: normal; display: block; margin-bottom: 5px; overflow: visible;">
+                Lead Mobile UX Designer
+            </em>
+        </div>
+        <div style="font-size: 13px; line-height: 1.2em; margin-top: 1%;">
+            <em style="font-size: 13px; font-style: normal; display: block; overflow: visible;">Mobile 
+                PayPal
+            </em>
+        </div>
+    </div>
+    
     <div style= "display: inline-block; margin-bottom: 20px; margin-left: 3px; margin-right: -10px; margin-top: 10px; min-height: 270px; overflow: visible; position: relative; text-align: center; vertical-align: top; width: 200px">
         <div style="display: block;" title="Michael Hwang">
             <a href="https://twitter.com/craterpop" target="_blank">
@@ -51,4 +74,5 @@
         </div>
     </div>
 </div>
+
 
